added cloudinary system. changed Create bootcampCommand.

--- a/src/nArchBootcampProject/WebAPI/appsettings.json
+++ b/src/nArchBootcampProject/WebAPI/appsettings.json
@@ -36,9 +36,9 @@
   },
 
   "CloudinaryAccount": {
-    "ApiKey": "",
-    "ApiSecret": "",
-    "Cloud": ""
+    "ApiKey": "799172212529766",
+    "ApiSecret": "Y6i2fAhWnchhwle2s06jkC3WASQ",
+    "Cloud": "dfnt1mpph"
   },
 
   "SeriLogConfigurations": {
